Fix effort at new library visibility selector radio buttons

--- a/kifi-backend/modules/shoebox/angular/src/libraries/manageLibrary.styl
+++ b/kifi-backend/modules/shoebox/angular/src/libraries/manageLibrary.styl
@@ -174,15 +174,14 @@ select.manage-lib-input
   display: inline-block
   vertical-align: top
   margin: 7px 20px 0 0
-  width: 56px
 
   .library-visibility-custom-input
     margin: 0
 
 .manage-lib-visibility-description
   display: inline-block
+  width: 280px
   vertical-align: top
-  width: 300px
   margin-top: 7px
 
 .manage-lib-visibility-description-content
